# the-companion

./: .gitignore  LICENSE  Procfile  README.md  app.py  pyproject.toml  requirements.txt  trivia.py  trivia_class.py  trivia_class_2.py  weather_API.py  weather_api.py
.github/: CODEOWNERS
application/: app.py  app_factory.py  config.py
application/data_base/: activity.json  appointment.json  journal.json  message_history.json  profile.json
application/db/: journal.json  medication.json  message_history.json  profile.json
application/features/: activity_handling.py  journal.py  scraping.py  trivia_class.py  weather_api.py
application/services/: Weather_api.py  activity_handling.py  appointment_handling.py  cat.py  data_base_handling.py  feature_helper.py  form_script.js  form_style.css  forms.py  function_helper.py  journal.py  medication_handling.py  message_handling.py  open_ai.py  profile_handling.py  registration_form.html  scraper.py  scraping.py  twilio_helper.py  weather_api.py  weather_class.py
application/static/: form_script.js  styles.css
application/templates/: registration.html  success.html
application/views/: main_views.py  whatsapp.py
tests/: test_default.py  test_flask.py  test_scraper.py  test_scraping.py  test_trivia_class.py  test_weather_class.py
