[tool.poetry]
name = "companion"
version = "0.1.0"
description = ""
authors = ["MightContainNuts <mightcontainnuts@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-sugar = "^1.0.0"
twilio = "^9.4.5"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
flask-wtf = "^1.2.2"
bs4 = "^0.0.2"
openai = "^1.63.2"
pytz = "^2025.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
